--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <img src="assets/img/profile_top.png" alt="" class=" w-50 img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Benjamin Martin</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="https://github.com/secretsudev" class="github" target="_blank"><i class="bx bxl-github"></i></a>
-          <a href="https://www.linkedin.com/in/benjamin-martin-832748262/" class="linkedin" target="_blank"><i
-              class="bx bxl-linkedin"></i></a>
+          <a href="https://github.com/bcguru701" class="github" target="_blank"><i class="bx bxl-github"></i></a>
+          <a href="mailto:secretsudev@gmail.com" class="Gmail" target="_blank"><i
+              class="bx bx-mail-send"></i></a>
         </div>
       </div>
     </div>
@@ -93,10 +93,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-10">
                 <p>
-                  He is a highly-skilled full-stack developer with over seven years of experience in React development.
-                  He is proficient in translating designs into high-quality code and implementing highly-responsive user
-                  interface components with React concepts. His primary focus is on web and mobile development. He is
-                  keen on writing clean and reusable code using best practices
+                  With an extensive background spanning over eight years, he has honed his skills as a highly skilled full-stack developer, specializing in React development. Proficient in translating intricate designs into meticulously crafted code, he exemplifies a commitment to excellence in design-to-code implementation. His expertise extends to implementing highly responsive user interface components using advanced React concepts, ensuring optimal user experiences across web and mobile platforms. Focused primarily on web and mobile development, he remains dedicated to staying abreast of industry trends and emerging technologies. His unwavering dedication to writing clean and reusable code, coupled with a keen adherence to best practices, underscores his commitment to delivering high-quality solutions that exceed expectations.
                 </p>
               </div>
             </div>
@@ -268,15 +265,34 @@
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
+              <h4>Cryptool.io</h4>
+              <h5>July 2023 - Present</h5>
+              <p><em>Full Stack Developer</em></p>
+              <ul>
+                <li>Developed a visually captivating landing page from scratch, ensuring responsiveness and user engagement.
+                </li>
+                <li>Implemented seamless integration with Google Sheets APIs for dynamic data retrieval and manipulation, prioritizing security and reliability.
+                </li>
+                <li>Designed and implemented engaging animations to enhance user experience and highlight key content.
+                </li>
+                <li>Optimized performance and accessibility through continuous enhancements, including code minification and image optimization.
+                </li>
+                <li>Collaborated closely with cross-functional teams and stakeholders, fostering transparent communication and agile project execution.
+                </li>
+                <li>Provided comprehensive documentation and tutorials for future reference, promoting knowledge sharing and maintainability.
+                </li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Oasis</h4>
-              <h5>May 2022 - February 2023 ( 10 months )</h5>
+              <h5>May 2022 - June 2023 ( 1 year 1 month )</h5>
               <p><em>Blockchain Developer</em></p>
               <ul>
-                <li>Creation, review and testing of EVM compatible smart contracts.
+                <li>Created, reviewed, and tested EVM-compatible smart contracts, ensuring adherence to best practices and security standards.
                 </li>
-                <li>Web3 renting marketplace building.
+                <li>Developed a decentralized Web3 renting marketplace, facilitating secure and transparent peer-to-peer transactions.
                 </li>
-                <li>Metamask fork research for pluggable smart contract proxy identity.
+                <li>Researched Metamask fork options for integrating pluggable smart contract proxy identity solutions, enhancing security and usability.
                 </li>
               </ul>
             </div>
@@ -285,11 +301,11 @@
               <h5>January 2021 - November 2022 ( 1 year 11 months )</h5>
               <p><em>React / Next.js Developer</em></p>
               <ul>
-                <li>Created mobile responsive custom components for an existing application.
+                <li>Created responsive components for an existing app, ensuring a seamless experience across devices.
                 </li>
-                <li>Worked on performance monitoring to improve app loading time.
+                <li>Improved app loading time through performance monitoring and optimization techniques.
                 </li>
-                <li>Wrote tests using Jest and reviewed the code of other developers.
+                <li>Wrote Jest tests and conducted code reviews to maintain code quality and reliability.
                 </li>
               </ul>
             </div>
@@ -298,48 +314,47 @@
               <h5>October 2020 - December 2021 ( 1 year 3 months )</h5>
               <p><em>Blockcahin Developer</em></p>
               <ul>
-                <li> Implement web3 projects in diverse team for different buz ideas.
+                <li>Spearheaded the implementation of various Web3 projects within diverse teams, collaborating on different business ideas to leverage blockchain technology effectively.
                 </li>
-                <li>NFT marketplaces on Fantom.
+                <li>Orchestrated the development of NFT marketplaces on the Fantom blockchain, focusing on creating robust and user-friendly platforms for trading non-fungible tokens.
                 </li>
-                <li>NFT minting and auction trading, NFT renting in GameFi.
+                <li>Led the design and implementation of NFT minting, auction trading, and renting functionalities within GameFi ecosystems. Developed innovative solutions to enhance the gaming experience and foster community engagement through NFT utilization.
                 </li>
-                <li>ERC721/ERC721A/ERC1155.
-                </li>
-              </ul>
-            </div>
-            <div class="resume-item">
-              <h4>Avatar Engines</h4>
-              <h5>November 2018 - October 2020 ( 2 years )</h5>
-              <p><em>Full Stack Engineer</em></p>
-              <ul>
-                <li>Worked on providing API endpoints with Node.js/Inversify and MongoDB.
-                </li>
-                <li>Built from scratch admin platform for managing platform's database entities
-                  and users using React, Node.js, and Mongoose.
-                </li>
-                <li>Implemented complex UI components with React/TypeScript and SCSS.
-                </li>
-                <li>Improved the UX by creating several DnD-based components.
-                </li>
-                <li>Wrote scripts to use and manipulate data from various sources.
+                <li>Extensively utilized ERC721, ERC721A, and ERC1155 standards for the creation, management, and interoperability of non-fungible tokens. Ensured compliance with industry standards and optimized token functionality for various use cases.
                 </li>
               </ul>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up">
             <div class="resume-item mt-5">
+              <h4>Avatar Engines</h4>
+              <h5>November 2018 - October 2020 ( 2 years )</h5>
+              <p><em>Full Stack Engineer</em></p>
+              <ul>
+                <li>Created robust API endpoints using Node.js, Inversify, and MongoDB for seamless data management.
+                </li>
+                <li>Developed a comprehensive admin platform from scratch using React, Node.js, and Mongoose, ensuring efficient database management and user administration.
+                </li>
+                <li>Engineered sophisticated UI components with React/TypeScript and SCSS to enhance user experience and interface interactivity.
+                </li>
+                <li>Improved user experience by integrating Drag-and-Drop (DnD) components, enhancing workflow efficiency and user productivity.
+                </li>
+                <li>Wrote custom scripts to manipulate data from various sources, ensuring data integrity and automating repetitive tasks.
+                </li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>OIS Solutions</h4>
               <h5>August 2018 - October 2019 ( 11 months)</h5>
               <p><em>Solidity Developer</em></p>
               <ul>
-                We're a team delivering the high quality blockchain solutions for our partners:
-                <li>Custom blockchain development: smart contracts, Defi, Metaverse, Payment solutions.
+                As a leading team in blockchain solutions, we specialize in delivering high-quality services to our partners:
+                <li class="mt-3">Custom Blockchain Development: Expertise in smart contracts, DeFi, Metaverse, and payment solutions.
                 </li>
-                <li>Whitelabel solutions: cryptocurrency wallet and exchange, NFT marketplace, tokens.
+                <li>Whitelabel Solutions: Offering cryptocurrency wallets, exchanges, NFT marketplaces, and tokens.
                 </li>
-                Despite these services, we are also working on our internal products. Right now we're implementing a
-                trading strategy, it's a bot powered by Rust and smart contracts on Solidity
+                <li>Internal Product Development: Currently, we're developing an innovative trading strategy—a bot powered by Rust and Solidity smart contracts.
+                </li>
               </ul>
             </div>
             <div class="resume-item">
@@ -349,15 +364,15 @@
               <p><em>Proficio
                 </em></p>
               <ul>
-                <li>Created the admin application of the web store in React</li>
-                <li>Replaced Redux with Apollo Client for GraphQL against a Ruby back-end
+                <li>Led the development of the admin application for the web store using React, ensuring intuitive user interfaces and efficient data management.
                 </li>
-                <li>Created a HOC architecture to reuse common GraphQL functionality for listing
-                  and filtering
+                <li>Replaced Redux with Apollo Client for seamless integration with GraphQL against a Ruby backend, optimizing data fetching and state management.
                 </li>
-                <li>Created our own custom UI library with styled components
+                <li>Implemented a Higher Order Component (HOC) architecture to facilitate the reuse of common GraphQL functionality for listing and filtering, enhancing code modularity and maintainability.
                 </li>
-                <li>Used HOC for form manipulation
+                <li>Developed a bespoke UI library using styled components, ensuring consistent branding and design across the application while promoting reusability and scalability.
+                </li>
+                <li>Utilized Higher Order Components (HOCs) for form manipulation, streamlining form handling logic and promoting code reuse throughout the application.
               </ul>
             </div>
           </div>
@@ -386,6 +401,17 @@
         </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/cryptool.png" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/cryptool.png" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Cryptool.io"><i class="bx bx-plus"></i></a>
+                <a href="https://cryptool.io/" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
