--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Air Labs</h4>
+              <h4>London Air Labs</h4>
               <h5>January 2021 - November 2022 ( 1 year 11 months )</h5>
               <p><em>React / Next.js Developer</em></p>
               <ul>
@@ -345,7 +345,7 @@
             </div>
             <div class="resume-item">
               <h4>OIS Solutions</h4>
-              <h5>August 2018 - October 2019 ( 11 months)</h5>
+              <h5>August 2018 - October 2019 ( 1 year 3 months )</h5>
               <p><em>Solidity Developer</em></p>
               <ul>
                 As a leading team in blockchain solutions, we specialize in delivering high-quality services to our partners:
@@ -359,7 +359,7 @@
             </div>
             <div class="resume-item">
               <h4>Frontend Engineer</h4>
-              <h5>February 2017 - August 2018 (7 months)
+              <h5>February 2017 - August 2018 ( 1 year 7 months )
               </h5>
               <p><em>Proficio
                 </em></p>
@@ -418,7 +418,7 @@
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Air Labs"><i class="bx bx-plus"></i></a>
+                  class="portfolio-lightbox" title="London Air Labs"><i class="bx bx-plus"></i></a>
                 <a href="https://www.airlabs.com" title="More Details" target="_blank"><i class="bx bx-link"></i></a>
               </div>
             </div>
